feat:added localStorage

--- a/src/Pages/Login/Login.module.css
+++ b/src/Pages/Login/Login.module.css
@@ -11,10 +11,6 @@ input {
   width: 300px;
 }
 
-button {
-  display: block;
-  margin-bottom: 30px;
-}
 .registrationText {
   font-size: 40px;
   font-weight: 500;
@@ -23,7 +19,7 @@ button {
 }
 
 .signInBtn {
-  width: 100%;
+  width: 305px;
 }
 
 .inputField {
